<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/account_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Input_layout"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/input_account"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            style="@style/Input_layout"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_account"
                android:hint="@string/account_content"
                style="@style/Input_EditText" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_layout">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Input_layout"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/input_password"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            style="@style/Input_layout"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_password"
                android:hint="@string/password_content"
                style="@style/Input_EditText" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_view"
        style="@style/Login_Button"
        android:text="@string/login"
        android:onClick="onClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>